--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ block tabs
     a.user-mentions(data-url='/user/mentions/'+session.id, data-action='user-mentions', href='javascript:;', title='Mentions') Mentions
     a.user-interactions(data-url='/user/interactions/'+session.id, data-action='user-interactions', href='javascript:;', title='Interact') Interact
     a.global-feed(data-url='/global/feed', href='javascript:;', data-action='global-feed', title='Global') Global
+    a.global-feed(href='/messages/', title='Messages') Messages
 
 block content
   if session
