fix #29, fix #28; resizing textareas and link to github

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -62,6 +62,8 @@ html
               li
                 a(href='javascript:;', id='settings-link', title='Edit settings') Edit Settings
               li
+                a(href='https://github.com/33mhz/noodleapp/issues', title='Submit Issues') Submit Issues
+              li
                 a(href='/logout', title='Sign out') Log out
 
     if session
