--- a/views/messages.pug
+++ b/views/messages.pug
@@ -22,26 +22,28 @@ block content
     ul#message-summary
       for channel in channels
         if (!channel.recent_message)
-          - var owner = channel.owner
+          - var owner = channel.user
         else
           - var owner = channel.recent_message.user
         if (!owner)
-          - owner = {"username":"", "content": {"avatar_image":{"link":""}}}
+          - owner = {"username":"", "content": {"avatar_image":{"url":""}}}
+        if (channel.raw && channel.type !== 'io.pnut.core.pm')
+          - var chat = channel.raw['io.pnut.core.chat-settings'][0].name
+        else
+          - var chat = ''
         li
           if (channel.has_unread)
             a(href='javascript:;', class='channel unread', data-action='message', data-username='@'+owner.username, data-id=channel.id)
               if (channel.type === 'io.pnut.core.pm')
-                img(src=owner.content.avatar_image.link+'?h=41', class='avatar writers', title='@'+owner.username)
                 for user_id in channel.acl.write.user_ids
-                  img(src='https://api.pnut.io/v0/users/'+user_id+'/avatar?h=41', class='avatar writers')
+                  img(src='https://api.pnut.io/v1/users/'+user_id+'/avatar?h=41', class='avatar writers')
               else
-                img(src=owner.content.avatar_image.link+'?h=80', class='avatar', title='@'+owner.username)
+                p= chat
           else
             a(href='javascript:;', class='channel', data-action='message', data-username='@'+owner.username, data-id=channel.id)
               if (channel.type === 'io.pnut.core.pm')
-                img(src=owner.content.avatar_image.link+'?h=41', class='avatar writers', title='@'+owner.username)
                 for user_id in channel.acl.write.user_ids
-                  img(src='https://api.pnut.io/v0/users/'+user_id+'/avatar?h=41', class='avatar writers')
+                  img(src='https://api.pnut.io/v1/users/'+user_id+'/avatar?h=41', class='avatar writers')
               else
-                img(src=owner.content.avatar_image.link+'?h=80', class='avatar', title='@'+owner.username)
+                p= chat
     ul#message-detail
