issues link to new tab

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -62,7 +62,7 @@ html
               li
                 a(href='javascript:;', id='settings-link', title='Edit settings') Edit Settings
               li
-                a(href='https://github.com/33mhz/noodleapp/issues', title='Submit Issues') Submit Issues
+                a(href='https://github.com/33mhz/noodleapp/issues', title='Submit Issues', target='_blank') Submit Issues
               li
                 a(href='/logout', title='Sign out') Log out
 
